syntax = "proto3";
package lum.network.dfract;

import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/lum-network/chain/x/dfract/types";

message WithdrawAndMintProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;

  string withdrawal_address = 3;
  int64 micro_mint_rate = 4;
}
